{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 114,
  "lineage": "e81297c0-8efc-2627-9c14-684f74b98828",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic1_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkInterfaces/az104-05-nic1",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/publicIPAddresses/az104-05-pip1",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0"
              }
            ],
            "ip_forwarding_enabled": true,
            "location": "westeurope",
            "mac_address": "60-45-BD-99-7D-07",
            "name": "az104-05-nic1",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "az104-05-rg1",
            "virtual_machine_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Compute/virtualMachines/az104-05-vm-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkInterfaces/az104-05-nic1",
            "internal_domain_name_suffix": "p3k5bi0rxqqufn05zxcqqeft0b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/publicIPAddresses/az104-05-pip1",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0"
              }
            ],
            "ip_forwarding_enabled": true,
            "location": "westeurope",
            "mac_address": "60-45-BD-99-7D-07",
            "name": "az104-05-nic1",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "az104-05-rg1",
            "virtual_machine_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Compute/virtualMachines/az104-05-vm-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/networkInterfaces/az104-05-nic2",
            "internal_domain_name_suffix": "i55nwoyficte1j2gnyv22yn3yc.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.51.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/publicIPAddresses/az104-05-pip2",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/subnet-0"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "60-45-BD-08-7F-3B",
            "name": "az104-05-nic2",
            "private_ip_address": "10.51.0.4",
            "private_ip_addresses": [
              "10.51.0.4"
            ],
            "resource_group_name": "az104-05-rg2",
            "virtual_machine_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Compute/virtualMachines/az104-05-vm-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg1",
            "location": "westeurope",
            "name": "az104-05-nsg1",
            "resource_group_name": "az104-05-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg2",
            "location": "westus",
            "name": "az104-05-nsg2",
            "resource_group_name": "az104-05-rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/publicIPAddresses/az104-05-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.96.104",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "az104-05-pip1",
            "resource_group_name": "az104-05-rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/publicIPAddresses/az104-05-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.184.235.78",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "az104-05-pip2",
            "resource_group_name": "az104-05-rg2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/routeTables/az104-05-rt",
            "location": "westeurope",
            "name": "az104-05-rt",
            "resource_group_name": "az104-05-rg1",
            "route": [
              {
                "address_prefix": "10.51.0.0/16",
                "name": "route-vnet1-to-vnet2",
                "next_hop_in_ip_address": "10.50.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_public_ip.pip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_machine.vm1",
            "azurerm_virtual_network.vnet1",
            "data.azurerm_network_interface.nic1_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0",
            "name": "subnet-0",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az104-05-rg1",
            "virtual_network_name": "az104-05-vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.51.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/subnet-0",
            "name": "subnet-0",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az104-05-rg2",
            "virtual_network_name": "az104-05-vnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0",
            "network_security_group_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg1",
            "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/subnet-0",
            "network_security_group_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg2",
            "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/subnet-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0",
            "route_table_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/routeTables/az104-05-rt",
            "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_public_ip.pip1",
            "azurerm_resource_group.rg1",
            "azurerm_route_table.route_table",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_machine.vm1",
            "azurerm_virtual_network.vnet1",
            "data.azurerm_network_interface.nic1_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a3f0557f-bc51-4221-b75f-cdc50810b3d1",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1",
            "location": "westeurope",
            "name": "az104-05-vnet1",
            "resource_group_name": "az104-05-rg1",
            "subnet": [
              {
                "address_prefix": "10.50.0.0/24",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/subnet-0",
                "name": "subnet-0",
                "security_group": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg1"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.51.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3bdbfe47-4005-4da6-a786-6e2bce61bdc2",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2",
            "location": "westus",
            "name": "az104-05-vnet2",
            "resource_group_name": "az104-05-rg2",
            "subnet": [
              {
                "address_prefix": "10.51.0.0/24",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/subnet-0",
                "name": "subnet-0",
                "security_group": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg2"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering1_to_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/virtualNetworkPeerings/peering-vnet1-to-vnet2",
            "name": "peering-vnet1-to-vnet2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2",
            "resource_group_name": "az104-05-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet1",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering2_to_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/virtualNetworkPeerings/peering-vnet2-to-vnet1",
            "name": "peering-vnet2-to-vnet1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1",
            "resource_group_name": "az104-05-rg2",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet1",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    }
  ]
}